--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "jsnext:main": "dist/index.es.js",
   "babel": {
     "presets": [
+      "react",
       "latest",
       "stage-0"
     ],
@@ -48,6 +49,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
     "chai": "^4.0.0-canary.1",
