--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint": "^3.8.0",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.3",
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^9.12.0",
     "mobx": "^3.1.9",
