--- a/package.json
+++ b/package.json
@@ -68,12 +68,13 @@
     "mobx-react": "^4.0.0",
     "mobx-router5": "^0.0.0",
     "mocha": "^3.2.0",
+    "prop-types": "^15.5.8",
     "react": "~15.4.2",
     "react-addons-test-utils": "~15.4.2",
     "react-dom": "~15.4.2",
     "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.6.1",
-    "router5": "~4.5.1",
+    "router5": "~4.5.2",
     "sinon": "^2.0.0-pre.3",
     "sinon-chai": "^2.9.0"
   },
@@ -85,9 +86,8 @@
   },
   "scripts": {
     "lint": "eslint src test tools",
-    "test": "mocha --compilers js:babel-register --recursive --require ./test/utils/test-setup.js 'test/*.js'",
-    "testDebug": "node $NODE_DEBUG_OPTION ./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive --require ./test/test-setup.js 'test/main.js'",
-    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
+    "test": "mocha --compilers js:babel-register --require ./test/utils/test-setup.js 'test/*.js'",
+    "test:watch": "mocha --compilers js:babel-register --require ./test/utils/test-setup.js --reporter min --watch 'test/*.js'",
     "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "node tools/build",
