--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "jsdom": "^9.12.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.0.0",
-    "mobx-router5": "^0.0.0",
+    "mobx-router5": "^1.0.0",
     "mocha": "^3.2.0",
     "prop-types": "^15.5.8",
     "react": "~15.4.2",
@@ -81,14 +81,14 @@
   "peerDependencies": {
     "react": "^15.0.0",
     "mobx": "^3.1.0",
-    "mobx-router5": "^0.0.0",
+    "mobx-router5": "^1.0.0",
     "mobx-react": "^4.0.0"
   },
   "scripts": {
     "lint": "eslint src test tools",
     "test": "mocha --compilers js:babel-register --require ./test/utils/test-setup.js 'test/*.js'",
     "test:watch": "mocha --compilers js:babel-register --require ./test/utils/test-setup.js --reporter min --watch 'test/*.js'",
-    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
+    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --require ./test/utils/test-setup.js 'test/*.js'",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "node tools/build",
     "prepublish": "npm run build",
