--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "presets": [
       "react",
       "stage-0",
-      [
-        "es2015", { "modules": false }
-      ]
+      ["es2015", { "modules": false }]
     ],
     "plugins": [
       "transform-decorators-legacy",
@@ -49,14 +47,14 @@
     ]
   },
   "dependencies": {
-    "babel-runtime": "^6.11.6"
+    "babel-runtime": "^6.11.6",
+    "prop-types": "^15.5.8"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "^6.23.0",
@@ -79,7 +77,6 @@
     "mobx-react": "^4.0.0",
     "mobx-router5": "^1.0.0",
     "mocha": "^3.2.0",
-    "prop-types": "^15.5.8",
     "react": "~15.4.2",
     "react-addons-test-utils": "~15.4.2",
     "react-dom": "~15.4.2",
