--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     "presets": [
       "react",
       "stage-0",
-      ["es2015", { "modules": false }]
+      [
+        "es2015",
+        {
+          "modules": false
+        }
+      ]
     ],
     "plugins": [
       "transform-decorators-legacy",
@@ -83,7 +88,7 @@
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "router5": "~4.5.2",
-    "semantic-release": "^6.3.2",
+    "semantic-release": "^6.3.6",
     "semantic-release-conventional-commits": "1.0.2",
     "sinon": "^2.0.0-pre.3",
     "sinon-chai": "^2.9.0"
