--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "jsdom": "^9.12.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.0.0",
-    "mobx-router5": "^1.0.0",
+    "mobx-router5": "^2.0.1",
     "mocha": "^3.2.0",
     "react": "~15.4.2",
     "react-addons-test-utils": "~15.4.2",
@@ -120,8 +120,18 @@
   "release": {
     "analyzeCommits": {
       "path": "semantic-release-conventional-commits",
-      "minorTypes": ["feat","minor"],
-      "patchTypes": ["fix", "patch", "docs", "refactor", "style", "perf"]
+      "minorTypes": [
+        "feat",
+        "minor"
+      ],
+      "patchTypes": [
+        "fix",
+        "patch",
+        "docs",
+        "refactor",
+        "style",
+        "perf"
+      ]
     }
   }
 }
