--- a/package.json
+++ b/package.json
@@ -80,14 +80,14 @@
     "jsdom": "^9.12.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.0.0",
-    "mobx-router5": "^2.0.1",
+    "mobx-router5": "^3.0.0",
     "mocha": "^3.2.0",
     "react": "~15.4.2",
     "react-addons-test-utils": "~15.4.2",
     "react-dom": "~15.4.2",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
-    "router5": "~4.5.2",
+    "router5": "^5.0.0",
     "semantic-release": "^6.3.6",
     "semantic-release-conventional-commits": "1.0.2",
     "sinon": "^2.0.0-pre.3",
@@ -97,8 +97,8 @@
     "react": "^15.0.0",
     "mobx": "^3.1.0",
     "mobx-react": "^4.0.0",
-    "mobx-router5": "^2.0.1",
-    "router5": "^4.0.0"
+    "mobx-router5": "^3.0.0",
+    "router5": "^5.0.0"
   },
   "scripts": {
     "commit": "git-cz",
