build(.eslintrc): Allow to print to console
Disabling 'no-console' linting rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "eqeqeq": 2,
     "no-else-return": 2,
     "no-multi-spaces": 0,
+    "no-console":0,
     // Strict mode
     "strict": 0,
     // Variables
