--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
     "chai": "3.5.0",
-    "chai-enzyme": "^0.6.1",
+    "chai-enzyme": "1.0.0-beta.0",
+    "cheerio": "1.0.0-rc.2",
     "commitizen": "2.9.6",
     "coveralls": "^2.11.14",
     "cz-conventional-changelog": "2.0.0",
     "del": "^2.2.2",
-    "enzyme": "^2.8.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "1.0.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.2.0",
@@ -82,9 +84,9 @@
     "mobx-react": "^4.0.0",
     "mobx-router5": "^3.0.0",
     "mocha": "^3.2.0",
-    "react": "~15.4.2",
-    "react-addons-test-utils": "~15.4.2",
-    "react-dom": "~15.4.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-test-renderer": "16.0.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "router5": "^5.0.0",
