--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "react-test-renderer": "16.0.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
-    "router5": "^5.0.0",
+    "router5": "6.1.2",
     "semantic-release": "^15.1.7",
     "semantic-release-conventional-commits": "2.0.0",
     "sinon": "^2.0.0-pre.3",
@@ -101,7 +101,7 @@
     "mobx": "^4.0.0",
     "mobx-react": "^5.0.0",
     "mobx-router5": "^4.0.0",
-    "router5": "^5.0.0"
+    "router5": ">= 6.1.0 < 7.0.0"
   },
   "scripts": {
     "commit": "git-cz",
