build(tests): Migrate to Jest

--- a/package.json
+++ b/package.json
@@ -79,11 +79,11 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
     "istanbul": "^1.1.0-alpha.1",
+    "jest": "23.6.0",
     "jsdom": "^9.12.0",
     "mobx": "^5.0.0",
     "mobx-react": "^5.2.0",
     "mobx-router5": "^4.3.0",
-    "mocha": "^3.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "16.0.0",
@@ -92,8 +92,6 @@
     "router5": "6.1.2",
     "semantic-release": "^15.1.7",
     "semantic-release-conventional-commits": "2.0.0",
-    "sinon": "^2.0.0-pre.3",
-    "sinon-chai": "^2.9.0",
     "travis-deploy-once": "4.4.1"
   },
   "peerDependencies": {
@@ -106,9 +104,9 @@
   "scripts": {
     "commit": "git-cz",
     "lint": "eslint src test tools",
-    "test": "mocha --compilers js:babel-register --require ./test/utils/test-setup.js 'test/*.js'",
-    "test:watch": "mocha --compilers js:babel-register --require ./test/utils/test-setup.js --reporter min --watch 'test/*.js'",
-    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --require ./test/utils/test-setup.js 'test/*.js'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cover": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "node tools/build",
     "publish:docs": "easystatic deploy docs --repo LeonardoGentile/react-mobx-router5",
